src/test/ui/closures/2229_closure_analysis/capture-enums.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/capture-enums.rs:18:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/capture-enums.rs:49:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/capture-enums.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: First Pass analysis includes:
  --> $DIR/capture-enums.rs:21:5
   |
LL | /     || {
LL | |
LL | |
LL | |         if let Info::Point(_, _, str) = point {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Capturing point[] -> ImmBorrow
  --> $DIR/capture-enums.rs:24:41
   |
LL |         if let Info::Point(_, _, str) = point {
   |                                         ^^^^^
note: Capturing point[(2, 0)] -> ByValue
  --> $DIR/capture-enums.rs:24:41
   |
LL |         if let Info::Point(_, _, str) = point {
   |                                         ^^^^^
note: Capturing meta[] -> ImmBorrow
  --> $DIR/capture-enums.rs:31:35
   |
LL |         if let Info::Meta(_, v) = meta {
   |                                   ^^^^
note: Capturing meta[(1, 1)] -> ByValue
  --> $DIR/capture-enums.rs:31:35
   |
LL |         if let Info::Meta(_, v) = meta {
   |                                   ^^^^

error: Min Capture analysis includes:
  --> $DIR/capture-enums.rs:21:5
   |
LL | /     || {
LL | |
LL | |
LL | |         if let Info::Point(_, _, str) = point {
...  |
LL | |         }
LL | |     };
   | |_____^
   |
note: Min Capture point[] -> ByValue
  --> $DIR/capture-enums.rs:24:41
   |
LL |         if let Info::Point(_, _, str) = point {
   |                                         ^^^^^
note: Min Capture meta[] -> ByValue
  --> $DIR/capture-enums.rs:31:35
   |
LL |         if let Info::Meta(_, v) = meta {
   |                                   ^^^^

error: First Pass analysis includes:
  --> $DIR/capture-enums.rs:52:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let SingleVariant::Point(_, _, str) = point;
...  |
LL | |         println!("{}", str);
LL | |     };
   | |_____^
   |
note: Capturing point[(2, 0)] -> ByValue
  --> $DIR/capture-enums.rs:55:47
   |
LL |         let SingleVariant::Point(_, _, str) = point;
   |                                               ^^^^^

error: Min Capture analysis includes:
  --> $DIR/capture-enums.rs:52:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let SingleVariant::Point(_, _, str) = point;
...  |
LL | |         println!("{}", str);
LL | |     };
   | |_____^
   |
note: Min Capture point[(2, 0)] -> ByValue
  --> $DIR/capture-enums.rs:55:47
   |
LL |         let SingleVariant::Point(_, _, str) = point;
   |                                               ^^^^^

error: aborting due to 6 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
